# CodeBuddy

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
firmware/: README.md  REFERENCE.md  platformio.ini
firmware/docs/: manual.html
firmware/src/: ble_bridge.cpp  ble_bridge.h  clock_orient_logic.h  data.h  main.cpp  xfer.h
firmware/tests/: about_info_test.cpp  clock_display_logic_test.cpp  clock_orient_logic_test.cpp  clock_time_logic_test.cpp  persona_logic_test.cpp  utf8_text_logic_test.cpp
firmware/tools/: test_serial.py  test_xfer.py
scripts/: build-firmware-release.sh  build-native-ble-helper.sh
src/codex_buddy/: __init__.py  agent.py  ble_transport.py  bridge.py  catalog.py  cli.py  events.py  launchd.py  proxy.py  reducer.py  runtime.py  session_log_watcher.py  setup_flow.py  shell_integration.py  shim.py  state_store.py  text_width.py
src/codex_buddy/native_ble_helper/: CodeBuddyBLEHelper.swift  Info.plist
tests/: test_agent.py  test_ble_transport.py  test_bridge.py  test_catalog.py  test_cli.py  test_launchd.py  test_proxy.py  test_reducer.py  test_runtime.py  test_session_log_watcher.py  test_setup_flow.py  test_shell_integration.py  test_shim.py  test_state_store.py  test_text.py  test_text_width.py
