[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-buddy"
version = "0.1.3"
description = "Code Buddy bridge for M5Stack StickS3 approvals"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "bleak>=0.22,<1",
  "websockets>=15,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
code-buddy = "codex_buddy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
codex_buddy = ["native_ble_helper/*.plist", "native_ble_helper/*.swift"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
